# text-to-cad

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-cad.txt
skills/cad/references/: gen-step-assembly.md  generator-contract.md  snapshot.md  validation-and-snapshots.md
skills/cad/scripts/cadref/: inspect.py
skills/cad/scripts/cadref/tests/: test_cadref_inspect.py
skills/cad/scripts/common/: generation.py  metadata.py
skills/cad/scripts/common/tests/: test_assembly_composition.py
skills/cad/scripts/snapshot/: cli.py
skills/cad/scripts/snapshot/tests/: test_snapshot.py
skills/urdf/: SKILL.md
skills/urdf/references/: urdf-workflow.md  validation.md
skills/urdf/scripts/: urdf_source.py
skills/urdf/scripts/tests/: test_urdf_source.py
viewer/: package.json
viewer/components/: CadViewer.js  CadWorkspace.js
viewer/components/workbench/: CadRenderPane.js  UrdfFileSheet.js  ViewerLoadingOverlay.js
viewer/components/workbench/hooks/: useCadAssets.js  useCadWorkspaceSession.js
viewer/lib/assembly/: meshData.js  meshData.test.js
viewer/lib/urdf/: kinematics.js  kinematics.test.js  parseUrdf.js  parseUrdf.test.js
viewer/lib/workbench/: persistence.js  sidebar.test.js
